Traffic-Management-Basics/grafana/00-granafa-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: granafa-gw
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      name: http-80
      number: 80
      protocol: HTTP
    hosts:
    - "grafana.icloud2native.com"
---
